force-app/main/default/objects/smagicinteract__countryISDCode__mdt/smagicinteract__countryISDCode__mdt.object-meta.xml
<CustomObject>
    <label>countryISDCode</label>
    <pluralLabel>countryISDCodes</pluralLabel>
</CustomObject>