force-app/main/default/objects/smagicinteract__countryISDCode__mdt/fields/smagicinteract__countryCode__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__countryCode__c</fullName>
    <label>countryCode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>