force-app/main/default/objects/smagicinteract__countryISDCode__mdt/fields/smagicinteract__countryCodeLength__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__countryCodeLength__c</fullName>
    <label>countryCodeLength</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>