force-app/main/default/objects/smagicinteract__countryISDCode__mdt/fields/smagicinteract__countryName__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__countryName__c</fullName>
    <label>countryName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>