force-app/main/default/objects/smagicinteract__countryISDCode__mdt/fields/smagicinteract__serverLocation__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__serverLocation__c</fullName>
    <label>serverLocation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>